--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1> Hello this is Zolza</h1>
-https://github.com/zzolza/zzolza.github.io/invitations
+<h1> Володька, это наша новая веб студия. </h1>
