--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1> Hello this is Zolza</h1>
-<h1> Володька, это наша новая веб студия </h1>
+---
+layout: default
+title: Landing Page
+subTitle: A Template by Start Bootstrap
+---
